editing some ui

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,7 +21,7 @@
     "technologiesSubtitle": "Tools and technologies I use to build modern, scalable frontend applications."
   },
   "projects": {
-    "title": "My works"
+    "title": "My work"
   },
   "projectDetails": {
     "backBtn": "Back to home",
